syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

import "dex/tick_data_type.proto";
import "dex/limit_tranche_indexes.proto";

message TickMap {
  string pairId = 1;
  int64 tickIndex = 2; 
  TickDataType tickData = 3; 
  LimitTrancheIndexes LimitOrderTranche0to1 = 4;
  LimitTrancheIndexes LimitOrderTranche1to0 = 5;
}

